#12 added stretch area, fixed some logic, removed scrollbar (webkit, moz)

--- a/src/Textarea/index.module.css
+++ b/src/Textarea/index.module.css
@@ -7,7 +7,7 @@
 .wrapper:focus-within > .label {
   font-size: 0.875rem;
   line-height: 1.5rem;
-  top: calc(50% - 2.4rem / 2 - 2.4rem);
+  top: -0.8rem;
   background: var(--color-bg-input);
   color: var(--color-primary);
   padding: 0 0.5rem;
@@ -29,33 +29,43 @@
 .label.changed {
   font-size: 0.875rem;
   line-height: 1.5rem;
-  top: calc(50% - 2.4rem / 2 - 2.4rem);
+  top: -0.8rem;
   background: var(--color-bg-input);
   padding: 0 0.5rem;
   left: 1rem;
   border-radius: 1.5rem;
 }
 
-.textarea {
-  outline: none;
-  background: var(--color-bg-input);
+.textareaWrapper {
+  padding: 0.6875rem 1rem 0.8125rem 1.5rem;
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
-  font-family: var(--font-regular);
-  font-size: 1rem;
+  transition: border-color 0.3s ease-in-out;
+  box-sizing: border-box;
   min-width: 14rem;
   min-height: 4.5rem;
-  color: var(--color-text-primary);
-  padding-top: 0.6875rem;
-  padding-bottom: 0.8125rem;
-  padding-left: 1.5rem;
-  box-sizing: border-box;
-  transition: border-color 0.3s ease-in-out;
-  resize: none;
+  height: 4.5rem; /* box-sizing без этого не пашет, wtf */
 }
 
-.textarea:focus,
-.textarea:hover {
+.textarea {
+  outline: none;
+  background: transparent;
+  border: none;
+  font-family: var(--font-regular);
+  font-size: 1rem;
+  height: 100%;
+  width: 100%;
+  color: var(--color-text-primary);
+  resize: none;
+  overflow-block: hidden; /* скрывает скроллбар в firefox */
+}
+
+.textarea::-webkit-scrollbar {
+  width: 0;
+}
+
+.textareaWrapper:hover,
+.textareaWrapper:focus-within {
   border: 2px solid var(--color-primary);
 }
 
@@ -77,12 +87,12 @@
   border: none;
 }
 
-.textarea.error {
+.textareaWrapper.error {
   border: 1px solid var(--color-error);
 }
 
-.textarea.error:hover,
-.textarea.error:focus {
+.textareaWrapper.error:hover,
+.textareaWrapper.error:focus-within {
   border: 2px solid var(--color-error);
 }
 
@@ -94,12 +104,12 @@
   color: var(--color-error);
 }
 
-.textarea.warning {
+.textareaWrapper.warning {
   border: 1px solid var(--color-highlighted);
 }
 
-.textarea.warning:hover,
-.textarea.warning:focus {
+.textareaWrapper.warning:hover,
+.textareaWrapper.warning:focus-within {
   border: 2px solid var(--color-highlighted);
 }
 
